--- a/blueprint/src/print.tex
+++ b/blueprint/src/print.tex
@@ -10,7 +10,10 @@
 % It is otherwise a very minimal preamble (you should probably at least
 % add cleveref and tikz-cd).
 
-\documentclass[a4paper]{report}
+%\documentclass[xelatex, a4paper, ja=standard]{bxjsarticle}
+\documentclass[a4paper]{ltjarticle}
+\usepackage{luatexja}
+\usepackage[no-math]{fontspec} % LuaLaTeX における数式の設定
 
 \usepackage{geometry}
 
@@ -24,8 +27,11 @@
 \input{macros/common}
 \input{macros/print}
 
+% my package
+\usepackage{bm}
+
 \title{My formalization project}
-\author{Noboru Nawashiro}
+\author{苗代}
 
 \begin{document}
 \maketitle
