--- a/blueprint/src/print.tex
+++ b/blueprint/src/print.tex
@@ -10,10 +10,10 @@
 % It is otherwise a very minimal preamble (you should probably at least
 % add cleveref and tikz-cd).
 
-%\documentclass[xelatex, a4paper, ja=standard]{bxjsarticle}
+\documentclass[xelatex, a4paper, ja=standard]{bxjsarticle}
 \documentclass[a4paper]{ltjarticle}
-\usepackage{luatexja}
-\usepackage[no-math]{fontspec} % LuaLaTeX における数式の設定
+%\usepackage{luatexja}
+%\usepackage[no-math]{fontspec} % LuaLaTeX における数式の設定
 
 \usepackage{geometry}
 
