xelatexに変更(ミスを修正)

--- a/blueprint/src/print.tex
+++ b/blueprint/src/print.tex
@@ -11,7 +11,7 @@
 % add cleveref and tikz-cd).
 
 \documentclass[xelatex, a4paper, ja=standard]{bxjsarticle}
-\documentclass[a4paper]{ltjarticle}
+%\documentclass[a4paper]{ltjarticle}
 %\usepackage{luatexja}
 %\usepackage[no-math]{fontspec} % LuaLaTeX における数式の設定
 
