--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -7,7 +7,7 @@
 % can start with a \section or \chapter for instance.
 
 \section{section1}
-
+hoge
 \begin{definition}
   \label{def:E8Lattice}
   \lean{E8Lattice}
