--- a/blueprint/src/content.tex
+++ b/blueprint/src/content.tex
@@ -7,10 +7,9 @@
 % can start with a \section or \chapter for instance.
 
 \section{section1}
-hoge
 \begin{definition}
   \label{def:E8Lattice}
-  \lean{E8Lattice}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice}
   \leanok
   \uses{def:IntegralLattice}
   $E_8$格子とは，integralLatticeであって，even unimodularかつランクが$8$であるもののことである．
@@ -18,18 +17,18 @@ hoge
 
 \begin{theorem}
   \label{thm:unique}
-  \lean{Mathlib.GroupTheory.IntegralLattice.E8.Basic.E8Lattice.unique}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.unique}
   \leanok
   2つの$E_8$格子$\Lambda_1,\ \Lambda_2$は同型である．
 \end{theorem}
 
 \begin{proof}
-  \leanok
   sorry.
 \end{proof}
 
 \begin{definition}
   \label{def:M0-M7}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.M0}
   \leanok
   $E_8$のCartan行列を$M_0$，それを1行ずつ行基本変形していき(その過程の行列を$M_1, M_2, \ldots, M_6$とする)上三角にしたものを$M_7$とする：
   \begin{gather}
@@ -60,7 +59,7 @@ hoge
 
 \begin{lemma}
   \label{lem:M7_upperTrianglar}
-  \lean{M7_upperTrianglar}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.M7_upperTrianglar}
   \leanok
   $M_7$は上三角である．
 \end{lemma}
@@ -73,7 +72,7 @@ hoge
 
 \begin{lemma}
   \label{lem:M7_det}
-  \lean{M7_det}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.M7_det}
   \leanok
   $\det M_7 = 1$である．
 \end{lemma}
@@ -82,22 +81,21 @@ hoge
   \leanok
   \uses{lem:M7_upperTrianglar, def:M0-M7}
   補題~\ref{lem:M7_upperTrianglar}より，$M_7$の行列式は対角成分たちの積であるから
-  \begin{align}
+  \begin{equation}
     \det M_7
-    &= 2 \cdot 2 \cdot (3 / 2) \cdot (5 / 6) \cdot (4 / 5) \cdot (3 / 4) \cdot (2 / 3) \cdot (1 / 2)\\
-    &= 1.
-  \end{align}
+    = 2 \cdot 2 \cdot (3 / 2) \cdot (5 / 6) \cdot (4 / 5) \cdot (3 / 4) \cdot (2 / 3) \cdot (1 / 2)\\
+    = 1.
+  \end{equation}
 \end{proof}
 
 \begin{theorem}
   \label{thm:E8_det}
-  \lean{E8_det}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.E8_det}
   \leanok
   $E_8$のCartan行列の行列式は$1$である．
 \end{theorem}
 
 \begin{proof}
-  \leanok
   \uses{def:M0-M7, lem:M7_det}
   補題~\ref{lem:M7_det}より
   \begin{equation}
@@ -112,9 +110,9 @@ hoge
 
 \begin{definition}
   \label{def:B}
-  \lean{B}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.B}
   \leanok
-  $B$を$E_8$のCartan行列$C \in \M_8(\Z)$から定まる双線型形式とする：
+  $B$を$E_8$のCartan行列$C (= M_0) \in \M_8(\Z)$から定まる双線型形式とする：
   \begin{equation}
     B(x, y) := \transpose{x} C y = \inner{x}{Cy} \qquad (\forall x, y \in \Z^8).
   \end{equation}
@@ -122,7 +120,7 @@ hoge
 
 \begin{lemma}
   \label{lem:inner_self_calc}
-  \lean{inner_self_calc}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.inner_self_calc}
   \leanok
   任意の$x \in \Z^8$に対し，次が成り立つ：
   \begin{equation}
@@ -146,7 +144,7 @@ hoge
 
 \begin{lemma}
   \label{lem:inner_self_comp_sq}
-  \lean{inner_self_comp_sq}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.inner_self_comp_sq}
   \leanok
   任意の$x \in \Z^8$に対し，平方完成すると次のようになる：
   \begin{equation}
@@ -166,9 +164,9 @@ hoge
 
 \begin{theorem}
   \label{thm:add_inner}
-  \lean{add_inner}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.add_inner}
   \leanok
-  $\forall x, y, z \in \Z^8,\ \inner{x + y}{z}_{\Z} = \inner{x}{z}_{\Z} + \inner{y}{z}_{\Z}$.
+  $\forall x, y, z \in \Z^8,\ B(x+y, z) = B(x, z) + B(y, z)$.
 \end{theorem}
 
 \begin{proof}
@@ -179,9 +177,9 @@ hoge
 
 \begin{theorem}
   \label{thm:inner_sym}
-  \lean{inner_sym}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.inner_sym}
   \leanok
-  $\forall x, y \in \Z^8,\ \inner{x}{y}_{\Z} = \inner{y}{z}_{\Z}$.
+  $\forall x, y \in \Z^8,\ B(x, y) = B(y, x)$.
 \end{theorem}
 
 \begin{proof}
@@ -192,28 +190,28 @@ hoge
 
 \begin{theorem}
   \label{thm:inner_self}
-  \lean{inner_self}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.inner_self}
   \leanok
-  $\forall x \in \Z^8,\ \inner{x}{x}_{\Z} \ge 0$.
+  $\forall x \in \Z^8,\ B(x, x) \ge 0$.
 \end{theorem}
 
 \begin{proof}
   \leanok
   \uses{lem:inner_self_comp_sq}
-  補題~\ref{lem:inner_self_comp_sq}より，$\inner{x}{x}_{\Z}$は平方の和で表せるから成り立つ．
+  補題~\ref{lem:inner_self_comp_sq}より，$B(x, x)$は平方の和で表せるから成り立つ．
 \end{proof}
 
 \begin{theorem}
   \label{thm:inner_self_eq_zero}
-  \lean{inner_self_eq_zero}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.inner_self_eq_zero}
   \leanok
-  $\forall x \in \Z^8,\ \inner{x}{x}_{\Z} = 0 \implies x = 0$.
+  $\forall x \in \Z^8,\ B(x, x) = 0 \implies x = 0$.
 \end{theorem}
 
 \begin{proof}
   \leanok
   \uses{lem:inner_self_comp_sq}
-  補題~\ref{lem:inner_self_comp_sq}より，$\inner{x}{x}_{\Z}$は平方の和で表せ，$= 0$とすると各項が$0$である．
+  補題~\ref{lem:inner_self_comp_sq}より，$B(x, x)$は平方の和で表せ，$= 0$とすると各項が$0$である．
   よって，最後の項に注目すると，$x_7 = 0$である．
   したがって，最後から2番目の項に注目すると，$x_6 = 0$である．
   これを繰り返すと，$x_0 = \cdots = x_7 = 0$を得る．
@@ -221,13 +219,54 @@ hoge
 
 \begin{theorem}
   \label{thm:even}
-  \lean{even}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.even}
   \leanok
-  $\forall x \in \Z^8,\ \inner{x}{x}_{\Z} = 0 \implies x = 0$.
+  $\forall x \in \Z^8,\ 2 \mid \inner{x}{x}_{\Z}$.
 \end{theorem}
 
 \begin{proof}
   \leanok
   \uses{lem:inner_self_calc}
   補題~\ref{lem:inner_self_calc}より従う．
+\end{proof}
+
+\begin{theorem}
+  \label{thm:unimodular}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.unimodular}
+  \leanok
+  $E_8$格子はunimodularである．
+\end{theorem}
+
+\begin{proof}
+  sorry.
+\end{proof}
+
+\begin{theorem}
+  \label{thm:exists_E8}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.exists_E8}
+  \leanok
+  $E_8$格子は存在する．
+\end{theorem}
+
+\begin{proof}
+  sorry.
+\end{proof}
+
+\begin{theorem}
+  $E_8$格子$\Lambda$に対し，$\forall n \in \N,\ \#\set{x \in \Lambda}{B(x, x) = n} < \infty$.
+\end{theorem}
+
+\begin{proof}
+  sorry.
+\end{proof}
+
+\begin{lemma}
+  \label{lem:card_norm_2}
+  \lean{Project.IntegralLattice.E8.Basic.E8Lattice.card_norm_2}
+  \leanok
+  $E_8$格子$\Lambda$に対し，$\#\set{x \in \Lambda}{B(x, x) = 2} = 240$.
+\end{lemma}
+
+\begin{proof}
+  sorry.
 \end{proof}
