--- a/blueprint/src/print.tex
+++ b/blueprint/src/print.tex
@@ -14,6 +14,7 @@
 %\documentclass[a4paper]{ltjarticle}
 %\usepackage{luatexja}
 %\usepackage[no-math]{fontspec} % LuaLaTeX における数式の設定
+%\documentclass[a4paper]{report}
 
 \usepackage{geometry}
 
